[tool.poetry]
name = "noaa"
version = "0.1.0"
description = ""
authors = ["Kerim Tricic <kerim.tricic@dualsharks.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
pandas = "^2.3.3"
openapi-client = { path = "noaa_client", develop = true }
uvicorn = {version = "^0.32.0", extras = ["standard"]}
fastapi = "^0.123.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
